--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,14 +21,15 @@ menus:
       weight: 50
 
 params:
-  homeToBlogText: "To&nbsp;blog"
-  sidebarDescription: "Hello, friend! This is my personal blog about modern technologies and useful utilities."
   social:
     youtube: "https://youtube.com/"
     github: "https://github.com/"
     telegram: "https://t.me/"
     twitch: "https://twitch.tv/"
     discord: "https://discord.com/"
+  homeToBlogText: "To&nbsp;blog"
+  sidebarDescription: "Hello, friend! This is&nbsp;my&nbsp;personal blog about modern technologies and useful utilities."
+  mailMeText: "Mail&nbsp;me"
   categoriesToPostsText: "to posts"
 
 markup:
